# rust-passman

./: Cargo.toml
src/: cli.rs  crypto.rs  main.rs  models.rs  vault.rs
