[package]
name = "rust_passman"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10" # AES-GCM authenticated encryption
aes = "0.8.4"
base64 = "0.22.1"
block-modes = "0.9.1"
block-padding = "0.3.3"
clap = { version = "4.5.41", features = ["derive"] }
dirs = "6.0.0"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
